# razzle-dazzle-portal

./: .gitignore  Cargo.toml
crates/portal-ui/: Cargo.toml  index.html  tailwind.config.js  tailwind.css
crates/portal-ui/src/: lib.rs
crates/portal-web/: Cargo.toml
crates/portal-web/src/: lib.rs
