[package]
name = "portal-web"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.6.12", features = ["multipart"] }
clap = { version = "4.2.1", features = ["derive"] }
color-eyre = "0.6.2"
dotenv = "0.15.0"
tokio = { version = "1.27.0", features = ["full", "tracing"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
